--- a/homework 2/Homework2.ipynb
+++ b/homework 2/Homework2.ipynb
@@ -194,6 +194,7 @@
     "            # Pass imgs through the model and find the loss.\n",
     "            output = model(imgs.view(imgs.shape[0], -1))\n",
     "            loss_train = loss_fn(output, labels)\n",
+    "            loss_train_value += float(loss_train)\n",
     "            \n",
     "            # Adject the params\n",
     "            optimizer.zero_grad()\n",
